# treesheets-gitpage

./: .gitignore  404.html  CLOUDFLARE_DEPLOY.md  Cargo.toml  Trunk.toml  build.rs  index.html  input.css  package-lock.json  rust-toolchain.toml  steps.md  tailwind.config.js
.claude/: settings.local.json
.github/workflows/: cloudflare-deploy.yml  gh-pages-deploy.yml
public/doc/: clipboard_1.html  make_food.html  吃的.html
src/: app.rs  article.rs  main.rs
