[package]
name = "treesheets-gitpage"
version = "0.1.0"
edition = "2024"

[package.metadata.leptos]
site-root = "dist"
site-pkg-dir = "pkg"
site-addr = "" 
# 添加基础路径配置 - 使用相对路径而不是绝对路径
base_path = "."

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = "0.6.0"
leptos = { version = "0.8.11", features = ["csr"] }
leptos_meta = "0.8.5"
leptos_router = "0.8.9"
