[package]
name = "treesheets-gitpage"
version = "0.1.0"
edition = "2024"

[package.metadata.leptos]
site-root = "dist"
site-pkg-dir = "pkg"
site-addr = "" 
# GitHub Pages部署需要正确的base路径
base_path = "/treesheets-gitpage"

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = "0.6.0"
leptos = { version = "0.8.11", features = ["csr"] }
leptos_meta = "0.8.5"
leptos_router = "0.8.9"
